# PhotoGalery

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml
app/config/: settings.py  urls.py
app/config/locale/en/LC_MESSAGES/: django.po
app/galery/: admin.py  models.py  serializers.py  translation.py  views.py
app/galery/migrations/: 0001_initial.py  0003_album_slug_photo_slug.py  0005_photo_tags.py  0006_alter_photo_image.py  0007_alter_album_label_alter_album_slug.py
app/pages/: context_processors.py  urls.py  views.py
app/pages/static/: Readme.txt  app.css
app/pages/templates/: album.html  base.html  form.html  home.html
app/pages/templatetags/: text_replace.py
app/user/: admin.py  models.py
app/user/migrations/: 0002_alter_user_options_user_date_joined_user_first_name_and_more.py  0003_alter_user_avatar.py  0004_socials_user_socials.py  0005_user_description_user_introduction.py
app/user/templates/registration/: login.html  logout.html
backend/config/: settings.py  urls.py
backend/core/: urls.py
backend/core/auth/: serializers.py  views.py
backend/core/user/: models.py  serializers.py  views.py
backend/core/user/migrations/: 0001_initial.py  (+1 more)
backend/galery/: admin.py  models.py  serializers.py  urls.py  views.py
backend/galery/migrations/: 0001_initial.py  0002_alter_photo_geom.py  0004_remove_photo_tags.py
backend/pages/: urls.py  views.py
backend/pages/static/: app.css
backend/pages/templates/: album copy.html  album.html  base.html  home.html
(+13 files in other folders)
